--- a/main.bib
+++ b/main.bib
@@ -172,3 +172,14 @@
     year = {1987},
     doi = {10.1021/ja00240a025}
 }
+
+@article{bib:BernskoetterBrookhart,
+    title = {Characterization of a Rhodium({I}) $\sigma$-Methane Complex in Solution},
+    author = {Wesley H Bernskoetter and Cynthia K Schauer and Karen I Goldberg and Maurice Brookhart},
+    journal = {Science},
+    volume = {326},
+    number = {5952},
+    pages = {553-556},
+    year = {2009},
+    doi = {10.1126/science.1177485}
+}
