--- a/Notes/Unit6/Unit6.tex
+++ b/Notes/Unit6/Unit6.tex
@@ -719,5 +719,58 @@
 
 
 
+\section{Midterm 2 Review}
+\begin{itemize}
+    \item \marginnote{5/22:}Midterm 2: 5/25 from 6:00-8:00 PM (proctored by Sophie).
+    \item No discussion on the 25th --- this is replacing that. Office hours are still on.
+    \item If we follow her comments on the papers, we're almost guaranteed to get a good grade.
+    \begin{itemize}
+        \item She's taking time --- if she gets our drafts back late, she'll give us an extension.
+    \end{itemize}
+    \item Midterm 2 content (top things to focus on in order):
+    \begin{enumerate}
+        \item \ce{N2} reduction (the question on dinitrogen reduction from one of your homeworks; really know this).
+        \begin{itemize}
+            \item The Schrock paper is really helpful for this!
+            \item Be able to understand $\sigma$ donation and $\pi$ acceptance.
+            \item Be able to draw orbitals.
+            \item Know Chatt and Hoffmann mechanisms.
+            \item First row vs. late row metal preferences.
+            \item We can show adding a proton and electron together (we don't need to do this separately).
+            \item Show oxidation states for every intermediate!
+        \end{itemize}
+        \item Polymerization (chain walking and transfer, how to get the different tacticities).
+        \begin{itemize}
+            \item Know the example from your homework.
+            \item Know the Wacker oxidation.
+        \end{itemize}
+        \item Hydrogenation/dehydrogenation.
+        \item Metathesis (last question on HW 3).
+        \item Hydroformylation, hydrocyanation.
+        \item Fundamentals of organometallic reactions: Coordination preferences, insertion/elimination preferences, dihydrogen vs. dihydride, just practice going through and drawing mechanisms.
+        \item Strong foundation in ligand donor properties --- seriously study homeworks and past tests.
+        \begin{itemize}
+            \item Relate to "is this exam cumulative?" question.
+            \item Know CO, ligand binding properties, high spin/low spin, etc.
+        \end{itemize}
+    \end{enumerate}
+    \item The best way to get better at time is to just practice drawing these mechanisms.
+    \begin{itemize}
+        \item Go through it when you first get it, do the questions you know quickly, and then proceed to the harder ones.
+    \end{itemize}
+    \item See example questions posted!
+    \item Explain how a $C_i$ catalyst gives a hemi-isotactic polypropylene avter activation with MAO to give a Zr alkyl and draw the mechanism of chain growth.
+    \begin{itemize}
+        \item Activation step: \ce{L_nMCl2 ->[MAO] L_nMMe+}.
+        \begin{itemize}
+            \item MMAO is another catalyst that's even more spicy.
+        \end{itemize}
+        \item Squiggly methyl means methyl bound with either/unknown stereochemistry.
+    \end{itemize}
+    \item TEMPO is a well-known radical trap.
+\end{itemize}
+
+
+
 
 \end{document}
